--- a/.gitignore
+++ b/.gitignore
@@ -115,12 +115,16 @@ temp/
 
 # local
 *.json
+*.qm
 
 # test
 *.test/
+*_test.*
 *.test
-test.*
-test_*
+test*
+
+# backup
 *.bak/
-*_bak.py
-*_bak.ui
+*_bak.*
+*.bak
+bak*
